# czk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/templates/: czk.rb.tmpl
.github/workflows/: publish.yml  tests.yml
src/czk_tool/: __init__.py  cli.py  counting.py  czkawka.py  duckdb_shell.py  rendering.py  report.py  viz.py
tests/: test_cli_args.py  test_csv_output.py  test_czkawka_command.py  test_duckdb_shell.py  test_privacy_guard.py  test_rendering.py  test_report_parsing.py  test_viz.py
