[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "czk-tool"
version = "0.1.0"
description = "CLI wrapper around czkawka_cli for duplicate media workflows"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
czk = "czk_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
