[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "czk-tool"
version = "1.0.6"
description = "CLI wrapper around czkawka_cli for duplicate media workflows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
czk = "czk_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
